# bist-data-service

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  webhooks.example.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
app/: __init__.py  aggregator.py  auth.py  config.py  deps.py  logging_config.py  main.py  market.py  metrics.py  models.py  pipeline.py  store.py  symbol_circuit.py  symbols.py  telegram_bot.py  updater.py  updater_main.py  webhooks.py
app/providers/: __init__.py  base.py  isyatirim.py  tradingview.py  yahoo.py  yahoo_chart.py
dashboard/: index.html  review-status.json
deploy/: README.md  grafana-dashboard.json  prometheus.yml
deploy/panel/: default.conf.template
scripts/: check_prices.py
tests/: conftest.py  test_aggregator.py  test_api.py  test_auth.py  test_base.py  test_config.py  test_isyatirim.py  test_market.py  test_pipeline.py  test_store.py  test_store_redis.py  test_stream.py  test_symbol_circuit.py  test_symbols.py  test_telegram_bot.py  test_tradingview.py  test_updater.py  test_webhooks.py  test_yahoo.py  test_yahoo_chart.py
