[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bist-data-service"
dynamic = ["version"]
description = "BIST hisseleri icin gecikmeli canli fiyat mikroservisi (FastAPI + Redis + coklu kaynak + SSE)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Armert Labs", email = "mertcan@armert.com.tr" }]
keywords = ["bist", "borsa", "finance", "stocks", "fastapi", "microservice", "sse", "redis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "yfinance>=0.2.50",
    "sse-starlette>=2.1",
    "httpx>=0.27",
    "pandas>=2.2",
    "redis>=5.0",
    "prometheus-fastapi-instrumentator>=7.0",
    "slowapi>=0.1.9",
    "python-json-logger>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[project.urls]
Homepage = "https://github.com/Armert-Labs/bist-data-service"
Repository = "https://github.com/Armert-Labs/bist-data-service"
Issues = "https://github.com/Armert-Labs/bist-data-service/issues"

[tool.hatch.version]
path = "app/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# --------------------------------------------------------------------------- #
# Ruff — linter + formatter
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "UP",        # pyupgrade
    "B",         # flake8-bugbear
    "C4",        # comprehensions
    "SIM",       # flake8-simplify
    "RUF",       # ruff-specific
    "ASYNC",     # flake8-async
]
ignore = [
    "B008",      # FastAPI Depends() pattern (fonksiyon cagrisi varsayilan arguman)
    "E501",      # satir uzunlugu (formatter halleder)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

# --------------------------------------------------------------------------- #
# Mypy — statik tip kontrolu
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true       # yfinance, prometheus_fastapi_instrumentator vb.
exclude = ["tests/", "scripts/"]

# --------------------------------------------------------------------------- #
# Pytest + Coverage
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["app"]
omit = ["app/updater_main.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:", "\\.\\.\\."]
